# authutils

./: README.md  pyproject.toml  requirements.txt
src/authutils/: __init__.py  auth.py  decorators.py  flask_adapter.py
src/authutils/common/: __init__.py  exceptions.py
src/authutils/common/types/: __init__.py  constants.py
src/authutils/managed/: __init__.py  auth_flow.py  exchange.py  models.py  registry.py
src/authutils/managed/core/: __init__.py  auth_flow.py  exchange.py  verification.py
src/authutils/managed/integrations/: __init__.py  base.py
src/authutils/managed/integrations/fastapi/: __init__.py  dependencies.py
src/authutils/managed/integrations/socketio/: __init__.py  auth.py
src/authutils/managed/models/: __init__.py  types.py
src/authutils/managed/providers/: __init__.py  base.py  google.py  interface.py
src/authutils/managed/services/: __init__.py  base.py  google.py
src/authutils/managed/storage/: __init__.py  base.py
src/authutils/managed/storage/jwks/: __init__.py  base.py  local.py
src/authutils/managed/storage/pkce/: __init__.py  base.py  local.py
src/authutils/managed/types/: __init__.py  token_request.py
src/authutils/managed/utils/: __init__.py  pkce.py
src/authutils/manual/: __init__.py  jwt_utils.py  token_utils.py
src/flask_auth/: __init__.py  auth.py  decorators.py
